@@ -1,3 +1,15 @@
+2014-07-22  Joseph Pecoraro  <pecoraro@apple.com>
+
+        JSLock release should only modify the AtomicStringTable if it modified in acquire
+        https://bugs.webkit.org/show_bug.cgi?id=135143
+
+        Reviewed by Pratik Solanki.
+
+        * runtime/JSLock.cpp:
+        (JSC::JSLock::willDestroyVM):
+        (JSC::JSLock::willReleaseLock):
+        Only set the AtomicStringTable when there was a VM, to balance JSLock::didAcquireLock.
+
 2014-07-22  Filip Pizlo  <fpizlo@apple.com>
 
         Fix cloop build.
